# csman

./: .gitignore  .gitmodules  CMakeLists.txt  Cfg.hpp  Command.cpp  Command.hpp  Config.cpp  Config.hpp  CsmBase.cpp  CsmBase.hpp  CsmConfig.cpp  CsmConfig.hpp  LICENSE  README.md  csman.cpp  developing_document.md  format.sh  main.cpp  pac_repo
curl/: Makefile  config.status  curl-config  libcurl.pc  libtool
curl/docs/: Makefile
curl/docs/cmdline-opts/: Makefile
curl/docs/examples/: Makefile
curl/docs/libcurl/: Makefile
curl/include/: Makefile
curl/include/curl/: Makefile
curl/lib/: curl_config.h  libcurl_la-security.lo
curl/lib/.deps/: curl-curl_multibyte.Po  curl-version_win32.Po  libcurl_la-asyn-thread.Plo  libcurl_la-base64.Plo  libcurl_la-conncache.Plo  libcurl_la-connect.Plo  libcurl_la-content_encoding.Plo  libcurl_la-cookie.Plo  libcurl_la-curl_ntlm_core.Plo  libcurl_la-curl_ntlm_wb.Plo  libcurl_la-curl_range.Plo  libcurl_la-curl_sasl.Plo  libcurl_la-dict.Plo  libcurl_la-doh.Plo  libcurl_la-dynbuf.Plo  libcurl_la-easy.Plo  libcurl_la-escape.Plo  libcurl_la-file.Plo  libcurl_la-formdata.Plo  libcurl_la-ftp.Plo  libcurl_la-ftplistparser.Plo  libcurl_la-getinfo.Plo  libcurl_la-gopher.Plo  libcurl_la-hmac.Plo  libcurl_la-hostasyn.Plo  libcurl_la-hostip.Plo  libcurl_la-hostip6.Plo  libcurl_la-http.Plo  libcurl_la-http_chunks.Plo  (+32 more)
curl/scripts/: Makefile
curl/src/: Makefile  curl
curl/tests/: Makefile
docs/: Dev_doc(ch).md  Test_doc(ch).md  developing_document.md
imports/covscript_system/: CMakeLists.txt
imports/mozart/: CMakeLists.txt
imports/zip/: CMakeLists.txt  zip.c
include/: Command.h  CsmBase.h  CsmConfig.h
include/csman/: README.md  command.hpp  common.hpp  dir.hpp  exception.hpp  file_io.hpp  global.hpp  http.hpp  idx.hpp  idx_file.hpp  initializer.hpp  pac_repo.hpp  pacman.hpp
include/mozart++/: fdstream
misc/: .csman_config  fopen.c  format.bat  format.sh  message.cpp  pac_repo  sources.json  sources_idx  sourcesreader.cpp
mozart/src/: process_unix.cpp
sources/: command.cpp  csman.cpp  global.cpp  initializer.cpp  main.cpp  network.cpp  system.cpp
sources/global/: context.cpp  network.cpp  str.cpp  system.cpp
sources/system/: darwin.cpp
src/: CmakeLists.txt  Command.cpp  Command.h  CsmBase.cpp  CsmBase.h  CsmConfig.cpp  CsmMain.cpp  process.cpp  process_win32.cpp
(+89 files in other folders)
